[FIX] hr_{recruitment,skills},mass_mailing,project,note: milk adaptations
hr_recruitment: switch smart button value and label
- Switching applicant's name with "Employee" label to be consistent with
  the rest of smart button's format

mass_mailing: adapt status bar layout
- Removed excessive margin between the status bar and the content
- Added no padding between status bar and the control panel
- Removed a useless border before the status
- Improved margin between alert and buttons

project: right side panel stats buttons alignment

hr_skills: fix `::before` alignment

== ISSUE ==

Before this commit, the :before line in Employee resume is not aligned
with the dots. This is due to the fact that the variable
$o-hrs-timeline-entry-padding used in the mixin isn't the right value we
should use.

There was also an issue with responsive.

== After this commit ==

We now use a calc, which process the half of the circle plus the padding
minus the border-width. The $o-horizontal-padding is the variable used
to define the padding of the line inside the form view.

We adapt this in a smaller media query since the $o-horizontal-padding
value is different.

task-2818586

Part-of: odoo/odoo#116641

--- a/addons/project/static/src/components/project_right_side_panel/project_right_side_panel.scss
+++ b/addons/project/static/src/components/project_right_side_panel/project_right_side_panel.scss
@@ -37,9 +37,11 @@ $o-rightpanel-p-tiny: $o-rightpanel-p-small*0.5;
         .o_form_view {
             .oe_button_box {
                 margin: -1px (-$o-rightpanel-p) 0;
+                box-shadow: inset 0 -1px 0 $border-color;
 
                 .oe_stat_button {
                     flex-basis: 25%;
+                    margin: 0;
 
                     &:nth-child(4n):not(:last-child) {
                         border-right-width: 0;
